# spark_noetic

./: .gitignore  README.md  onekey.sh  test.py
src/3rd_app/auto_match/config/: test_map.pgm
src/3rd_app/auto_match/launch/: auto_match.launch
src/3rd_app/auto_match/nodes/: detect_ros.py  detect_ros_lzk.py  runtask.py
src/3rd_app/auto_match_24/auto_match/config/: items_config.yaml  mark_map.pkl  test_map.pgm
src/3rd_app/auto_match_24/auto_match/config/move_base_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  (+1 more)
src/3rd_app/auto_match_24/auto_match/launch/: auto_match.launch
src/3rd_app/auto_match_24/auto_match/nodes/: cali_node.py  detect_ros.py  mark_move.py  runtask.py  runtasklzk.py
src/3rd_app/auto_match_24/auto_match/rviz/: auto_match.rviz
src/3rd_app/auto_match_24/auto_match/scripts/: location_learn_guide.sh
src/3rd_app/auto_match_24/spark_move/move_demo/: CMakeLists.txt  package.xml
src/3rd_app/auto_match_24/spark_move/move_demo/scripts/: teleop_twist_keyboard.py
src/3rd_app/auto_match_24/teleop_twist_keyboard/: teleop_twist_keyboard.py
src/3rd_app/move2grasp/launch/: automatch.launch  move2grasp.launch  teleop2grasp.launch
src/3rd_app/move2grasp/rviz/: spark_gmapping_d435.rviz
src/3rd_app/move2grasp/scripts/: draw_button.py  draw_direction.py  draw_grasp.py  draw_handle.py  draw_release.py  draw_set.py  draw_step.py  grasp_d435.py  grasp_pro_new.py  move.py  parallel_aligner.py  resetarm.py  task.py
src/spark_app/spark_navigation/param/: costmap_common_params.yaml
src/spark_driver/arm/uArm/swiftpro/: CMakeLists.txt
(+2 files in other folders)
